--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,12 @@
 Zoph Changelog
+Zoph 0.8.0.1
+23 Sep 2009
+
+Security fix for 0.8
+
+Bugs
+* Fixes a security bug that caused a user to be able to execute admin-only pages.
+
 
 Zoph 0.8
 9 Sept 2009
